--- a/TesiSensori/app/src/main/res/layout/activity_main.xml
+++ b/TesiSensori/app/src/main/res/layout/activity_main.xml
@@ -60,4 +60,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pressure" />
 
+    <Button
+        android:id="@+id/orientation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/orientamento"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/light" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
